# discordwrap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: lib-ci.yml  lint-pr.yml  semantic-release.yml
discordwrap/: __init__.py
discordwrap/Auth/: __init__.py
discordwrap/Errors/: Errors.py  __init__.py
discordwrap/auth/: auth.py
discordwrap/core/: channel.py  request.py
discordwrap/errors/: errors.py
discordwrap/helloworld/: helloworld.py
discordwrap/methods/: channel.py  messages.py
discordwrap/request_base/: __init__.py  request_base.py
scripts/: build.sh  get_payload.py  test_wrap.py
tests/: conftest.py  monkey.py  test_discord_wrap.py
tests/responses/: get_channel.json  new_message.json
