[tool.poetry]
name = "discordwrap"
version = "0.8.0"
description = "A simple, intuitive wrapper around the underbelly of the discord API. This library is meant to be used with the discord docs. Responses from methods in the library will return JSON just as discords api details."
authors = ["josh <josh@brunuslabs.com>"]
readme = "README.md"
license = 'MIT'
homepage = "https://discordwrap.brunuslabs.com/"
documentation = "https://discordwrap.brunuslabs.com/"
repository = "https://github.com/Brunus-Labs/discordwrap"
keywords = ['Discord', "API", "Lightweight", "AsyncIO"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
python-dotenv = "1.0.0"
python-semantic-release = "^7.31.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "discordwrap/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}"
]
major_on_zero = false
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

